2007-05-13  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: install data in $(datadir)/gnome-panel/ instead of
	$(datadir)/gnome/panel/
	Fix bug #436461

2007-05-13  Vincent Untz  <vuntz@gnome.org>

	* panel-util.c: (panel_make_unique_desktop_path_from_name): remove
	duplicate g_free() which makes the panel crash

2007-05-13  Vincent Untz  <vuntz@gnome.org>

	* panel-util.c: (panel_error_dialog):
	* panel-context-menu.c: (panel_context_menu_show_about_dialog):
	* panel.c: (panel_deletion_dialog): don't call
	gtk_window_set_wmclass() since GTK+ doc says "Don't use this
	function."

2007-05-13  Vincent Untz  <vuntz@gnome.org>

	* gnome-panel.desktop.in.in: renamed from gnome-panel.desktop.in and
	add a comment
	* panel-context-menu.c: (panel_context_menu_show_about_dialog): update
	description to be less geeky
	* Makefile.am: updated

2007-05-12  Vincent Untz  <vuntz@gnome.org>

	* panel-ditem-editor.c: (type_combo_changed): change mnemonic for
	Command.
	Fix bug #419780

2007-05-12  Vincent Untz  <vuntz@gnome.org>

	* gnome-desktop-item-edit.c: (get_unique_name): kill
	(find_uri_on_save): use panel_make_unique_desktop_path_from_name()
	instead
	* panel-util.[ch]: (panel_make_unique_desktop_path_from_name): new,
	based on code from panel_make_unique_desktop_uri(), but also takes
	into account NAME_MAX
	(panel_make_unique_desktop_uri): use
	panel_make_unique_desktop_path_from_name()
	Fix bug #426281

2007-05-12  Vincent Untz  <vuntz@gnome.org>

	* panel-gdm.c: (gdm_init_protocol_connection): prefer the new path for
	the gdm socket.
	Fix bug #437460. Patch by Loïc Minier <lool+gnome@via.ecp.fr>

2007-05-12  Vincent Untz  <vuntz@gnome.org>

	* panel-action-button.c: (panel_action_shutdown_reboot_is_disabled):
	renamed from panel_action_shutdown_is_disabled()
	* panel-logout.c: (panel_logout_new): only show restart/shutdown
	buttons when gdm supports the actions
	Fix bug #433792. Patch by Brian Cameron <Brian.Cameron@Sun.Com>

2007-05-12  Vincent Untz  <vuntz@gnome.org>